--- a/page.html
+++ b/page.html
@@ -669,6 +669,10 @@
 			        }
 			    return c
 			};
+			var iw = function(){
+				alert(navigator.userAgent);
+				return navigator.userAgent.match(/WIFI/i);
+			}
 
 
 			//播放音频
@@ -709,33 +713,35 @@
 					else if(speed >= 1500){
 						isLoad = true;
 						$(".loading").fadeOut(400);
-
-						//预加载全部图片
-						preloadImg();
 					}
 					else{
 						setTimeout(function(){
 							isLoad = true;
 							$(".loading").fadeOut(400);
 						},1500-speed);
-
-						//预加载全部图片
-						preloadImg();
-					}
+					};
+					preloadImg();
 					
 				});
 			}
 			else{
 				$("body").addClass("showcode");
 			};
+	
+
 			//预加载全部图片
 			var preloadImg =function(){
-				$.each(imgList,function(){
-					if(this.url){
-						var myImage = new Image();
-						myImage.src=this.url;
-					}
-				})
+				//如果是wifi
+				if(iw()){
+					alert("加载了好多");
+					$.each(imgList,function(){
+						if(this.url){
+							var myImage = new Image();
+							myImage.src=this.url;
+						}
+					})
+				}
+				
 			}
 		}());
 	</script>
